<resources>
    <string name="app_name">GymAppCS50</string>
    <string name="weight">Weight</string>
    <string name="reps">Reps</string>
    <string name="add">Add</string>
    <string name="create">Create exercise</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="hint_exercise_name">Exercise name</string>
    <string name="create_exercise_title_dialog">Create exercise</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>