<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/create_exercise"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/select_exercise"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:outlineAmbientShadowColor="@color/design_default_color_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/weight_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/select_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/reps_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/reps"
        android:inputType="number"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_input" />

    <Button
        android:id="@+id/add_exercise"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reps_input" />

    <Button
        android:id="@+id/stop_workout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>